fixed spacing on home page

--- a/src/components/PostItems/PostItems.css
+++ b/src/components/PostItems/PostItems.css
@@ -41,6 +41,7 @@
     font-weight: bold;
     font-size: 18px;
     margin-top: 10px;
+    margin-right: 3px;
 }
 
 .postContentItem:hover, .linkToPost:hover {
